reverted world progress save paths
master_checklist.json and hunt_winner.json now live in the world root again. Removed chat command to see if a particular item was complete.